manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "myakscluster-60a1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "myakscluster-60a1"
  template:
    metadata:
      labels:
        app: "myakscluster-60a1"
    spec:
      containers:
        - name: "myakscluster-60a1"
          image: "exemplum.azurecr.io/myakscluster"
          ports:
          - containerPort: 80
