manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "myakscluster-60a1"
    labels:
        app: "myakscluster-60a1"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: akssamples-myakscluster-60a1.2cc757d2625b463bbd56.southeastasia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "myakscluster-60a1"
                servicePort: 80
